--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <h1>CRAY ISLAND MURDER</h1>
+  <h1>CRAY ISLAND MURDER MYSTERY</h1>
 
 	<div id="container">
 		<div id="sceneContent">
@@ -29,13 +29,8 @@
 
 <script src="js/jquery-3.0.0.min.js"></script>
 <script src="js/yarn-parser.js"></script>
-<script src="js/custom-conditions.js"></script>
-<script src="js/conditions.js"></script>
-<script src="js/custom-actions.js"></script>
 <script src="js/actions.js"></script>
-<script src="js/custom-display.js"></script>
 <script src="js/display.js"></script>
-<script src="data/processed-data.js"></script>
 <script src="js/main.js"></script>
 
 </html>
