--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Game name: Cray Island Murder Mystery | Team Members: Vanessa Tran, Jessie Xu, Zihui Liu, Rachel Park, and Aya Kakizaki-->
 <html>
 <head>
 	<meta charset="utf8"/>
